# azure-dev-environment

./: README.md  WORKSPACE
.devcontainer/: devcontainer.json
ade/: BUILD.bazel  defs.bzl  deploy.py  deps.bzl
ade/private/: BUILD.bazel  common.bzl  repositories.bzl
azure_dev_environment/: BUILD.bazel  __init__.py  deployer.py
azure_dev_environment/network/: deployer.py
azure_dev_environment/templates/: BUILD.bazel  vm-deployment-tpl.json
azure_dev_environment/virtual_machine/: BUILD.bazel  deployer.py
